Fixed filter in dark mode

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -368,3 +368,7 @@ body{
 .card-subtitle {
   font-weight: bold;
 }
+
+#filters {
+  color: var(--dark1);
+}
